tests/baselines/reference/typeTagNoErasure.errors.txt
typeTagNoErasure.js(7,6): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.


==== typeTagNoErasure.js (1 errors) ====
    /** @template T @typedef {<T1 extends T>(data: T1) => T1} Test */
    
    /** @type {Test<number>} */
    const test = dibbity => dibbity
    
    test(1) // ok, T=1
    test('hi') // error, T=number
         ~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    